change config to run locally

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/amigoscode
+# connect to local database
+spring.datasource.url=jdbc:postgresql://localhost:5432/jpademo
 spring.datasource.username=
 spring.datasource.password=
+
+# create schema before application and drop everything when shut down
 spring.jpa.hibernate.ddl-auto=create-drop
+# to see SQL statement that hibernate will generate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# let SQL be formatted
 spring.jpa.properties.hibernate.format_sql=true
